DigitalNoticeBoard/src/main/webapp/resources/css/home.css
.notice{
	border: 2px solid black;
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background-color: white;
    border-radius: 5px;
    margin: 10px;
    width: 200px;
}  

.notice-header{
    background-color: pink;
    border-radius: 5px 5px 0px 0px;
    padding: 5px;
    color: black;
}

.notice-body{
	background-color: white;
	color:#302929;
}

.channel{
	margin-top:10px;
	margin-bottom:20px;
	border-top:2px solid black;
	border-bottom:2px solid black;
	background-color: #8c8c8c;
	padding-left: 30px;
	padding-right:30px;
	padding-bottom:20px;
	padding-top:10px;
	color: white;
}

.channel-title{
	padding-top:5px;
	margin-bottom:5px;
	border-top:2px solid black;
	border-bottom:2px solid black;
	background-color: #2e2e2e;
	color: white;
}

.shortnotice{
	background-color: #F5F5DC;
	color: black;
	border: 2px solid black;
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.slick-slide {
    height: inherit !important;
}

.slick-track{
    display: flex !important;
}

.shortnoticeHeight{
	height: 2064px;
}

.form-control-shortnotice {
    display: block;
    width: 100%;
    height: calc(1.5em+ 0.75rem+ 2px);
    padding: 2.375rem 0.75rem;
    font-size: 2rem;
    font-weight: 400;
    line-height: 66.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 9px solid #ced4da;
    border-radius: 0;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

